# algotread

./: .env.backup  .env.example  .gitignore  README.md  debug_env.py  main.py  pyproject.toml  test_backtest.py  test_paper_trading.py
deployment/: README.md  algotread-news.service  algotread-news.timer  algotread.service  install-news-timer.sh  install-service.sh
docs/: DATA_SOURCE_COMPLIANCE.md  DYNAMIC_WATCHLIST.md  GLOBAL_MARKET_ANALYSIS.md  NEWS_BROADCASTING.md  NEWS_INTEGRATION.md  SYSTEMD_SERVICE.md  TELEGRAM_NOTIFICATIONS.md
examples/: dynamic_watchlist_example.py  global_market_analysis_example.py  news_broadcaster_example.py  news_fetcher_example.py  stock_research_example.py  telegram_notifications_example.py
scripts/: broadcast_news.py  fix_telegram_chat_id.sh  test_telegram.py
src/: config.py  main.py
src/backtest/: __init__.py  backtest_engine.py  performance.py  report.py
src/core/: indicators.py  risk.py
src/core/strategies/: __init__.py  base.py  ema_trend.py  orb_supertrend.py  vwap_reversion.py
src/data/: fetcher.py  models.py  news_fetcher.py  websocket_client.py
src/execution/: __init__.py
src/live/: __init__.py  live_engine.py  order_manager.py
src/llm/: dynamic_watchlist.py  global_market_analyzer.py  llm_client.py  regime_classifier.py  sentiment_analyzer.py  stock_research.py  trade_journal.py
src/notifications/: __init__.py  news_broadcaster.py  telegram_notifier.py
src/paper/: __init__.py  paper_engine.py
tests/: test_indicators.py  test_news_fetcher.py  test_risk.py  test_stock_research.py
